--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start":"parcel build ./src/index.html",
-    "dev":"parcel ./src/index.html"
+    "start": "parcel build ./src/index.html",
+    "dev": "parcel ./src/index.html"
   },
   "keywords": [],
   "author": "",
@@ -13,6 +13,7 @@
   "devDependencies": {
     "@parcel/transformer-vue": "^2.3.2",
     "parcel": "^2.3.2",
-    "vue": "^3.2.31"
+    "vue": "^3.2.31",
+    "vue-tsc": "^0.32.0"
   }
 }
