--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@parcel/transformer-vue": "^2.3.2",
     "parcel": "^2.3.2",
     "vue": "^3.2.31",
+    "vue-template-compiler": "^2.6.14",
     "vue-tsc": "^0.32.0"
   }
 }
